--- a/OpenFast/OpenFAST.csproj
+++ b/OpenFast/OpenFAST.csproj
@@ -128,14 +128,15 @@
     <Compile Include="Debug\BasicEncodeTrace.cs" />
     <Compile Include="Debug\ITrace.cs" />
     <Compile Include="DecimalValue.cs" />
+    <Compile Include="Error\FastException.cs" />
+    <Compile Include="Error\RepErrorException.cs" />
+    <Compile Include="Error\StatErrorException.cs" />
     <Compile Include="IDictionary.cs" />
-    <Compile Include="Error\ErrorCode.cs" />
+    <Compile Include="Error\Errors.cs" />
     <Compile Include="Error\ErrorHandler.cs" />
-    <Compile Include="Error\ErrorType.cs" />
-    <Compile Include="Error\Severity.cs" />
     <Compile Include="Error\FastConstants.cs" />
     <Compile Include="Error\FastDynamicError.cs" />
-    <Compile Include="Error\FastException.cs" />
+    <Compile Include="Error\DynErrorException.cs" />
     <Compile Include="IFieldValue.cs" />
     <Compile Include="Global.cs" />
     <Compile Include="GlobalDictionary.cs" />
