--- a/UnitTest/UnitTest.csproj
+++ b/UnitTest/UnitTest.csproj
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="4.0">
+<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="3.5">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.30729</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{05D5E09C-CEF1-4831-BF48-DAA36977100B}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -12,7 +12,7 @@
     <AssemblyName>UnitTest</AssemblyName>
     <FileUpgradeFlags>
     </FileUpgradeFlags>
-    <OldToolsVersion>3.5</OldToolsVersion>
+    <OldToolsVersion>2.0</OldToolsVersion>
     <UpgradeBackupLocation>
     </UpgradeBackupLocation>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
@@ -88,6 +88,9 @@
     <Compile Include="Template\BasicTemplateRegistryTest.cs" />
     <Compile Include="Template\DynamicTemplateReferenceTest.cs" />
     <Compile Include="Template\GroupTest.cs" />
+    <Compile Include="Template\Loader\ComposedDecimalParserTest.cs" />
+    <Compile Include="Template\Loader\ScalarParserTest.cs" />
+    <Compile Include="Template\Loader\SequenceParserTest.cs" />
     <Compile Include="Template\MessageTemplateTest.cs" />
     <Compile Include="Template\Operator\DefaultOperatorTest.cs" />
     <Compile Include="Template\Operator\DeltaByteVectorOperatorTest.cs" />
