--- a/UnitTest/UnitTest.csproj
+++ b/UnitTest/UnitTest.csproj
@@ -166,6 +166,9 @@
       <Link>session.xml</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="..\Files\Tests\SampleXmlTest.xml">
+      <Link>XmlBasedTests\SampleXmlTest.xml</Link>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\Files\CME\messages.fast">
